# workshop-uncool-mlops

./: README.md  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: on_pr.yml
outs/: data_metrics.json  split_metrics.json  train_metrics.json
outs/eval/plots/: confusion_matrix.json
outs/train_metrics/scalars/: epoch.tsv  eval_accuracy.tsv  eval_loss.tsv  eval_runtime.tsv  eval_samples_per_second.tsv  eval_steps_per_second.tsv  train_loss.tsv  train_runtime.tsv  train_samples_per_second.tsv  train_steps_per_second.tsv
src/: get_data.py
