[tool.poetry]
name = "workshop-uncool-mlops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.3"
dvc = {extras = ["gdrive"], version = ">=2.8.3"}
dvclive = ">=0.4.5"
fire = ">=0.4.0"
loguru = ">=0.5.3"
pygithub = ">=1.55"
scikit-learn = ">=1.0.1"
torch = ">=1.0"
datasets = ">=1.15"
transformers = ">=4.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
